[gd_scene load_steps=4 format=3 uid="uid://c041446kxak13"]

[ext_resource type="PackedScene" uid="uid://cgvb2nfbovs56" path="res://src/ois/state_managers/state_manager.tscn" id="1_t4stl"]
[ext_resource type="Script" path="res://src/ois/state_managers/inventory_one_handed_tool.gd" id="2_i0qxf"]
[ext_resource type="PackedScene" uid="uid://c7jka6pr2nc0" path="res://src/ois/states/state.tscn" id="3_t4jut"]

[node name="StateManager" node_paths=PackedStringArray("current_state") instance=ExtResource("1_t4stl")]
script = ExtResource("2_i0qxf")
current_state = NodePath("IdleState")

[node name="IdleState" parent="." index="0" instance=ExtResource("3_t4jut")]

[node name="GrabState" parent="." index="1" instance=ExtResource("3_t4jut")]

[node name="TriggerState" parent="." index="2" instance=ExtResource("3_t4jut")]

[node name="InventoryState" parent="." index="3" instance=ExtResource("3_t4jut")]
